--- a/.gitignore
+++ b/.gitignore
@@ -37,4 +37,132 @@ out/
 # Temporary files
 *.tmp
 *.temp
+.cache/
+
+# MySQL specific files
+*.frm
+*.ibd
+*.myd
+*.myi
+*.err
+*.pid
+*.trn
+*.trg
+*.tmd
+*.opt
+*.par
+*.ibz
+*.ibd
+*.ibdata1
+*.ibdata2
+*.ibdata3
+*.ibdata4
+*.ibdata5
+*.ibdata6
+*.ibdata7
+*.ibdata8
+*.ibdata9
+*.ibdata10
+*.ibdata11
+*.ibdata12
+*.ibdata13
+*.ibdata14
+*.ibdata15
+*.ibdata16
+*.ibdata17
+*.ibdata18
+*.ibdata19
+*.ibdata20
+*.ibdata21
+*.ibdata22
+*.ibdata23
+*.ibdata24
+*.ibdata25
+*.ibdata26
+*.ibdata27
+*.ibdata28
+*.ibdata29
+*.ibdata30
+*.ibdata31
+*.ibdata32
+*.ibdata33
+*.ibdata34
+*.ibdata35
+*.ibdata36
+*.ibdata37
+*.ibdata38
+*.ibdata39
+*.ibdata40
+*.ibdata41
+*.ibdata42
+*.ibdata43
+*.ibdata44
+*.ibdata45
+*.ibdata46
+*.ibdata47
+*.ibdata48
+*.ibdata49
+*.ibdata50
+*.ibdata51
+*.ibdata52
+*.ibdata53
+*.ibdata54
+*.ibdata55
+*.ibdata56
+*.ibdata57
+*.ibdata58
+*.ibdata59
+*.ibdata60
+*.ibdata61
+*.ibdata62
+*.ibdata63
+*.ibdata64
+*.ibdata65
+*.ibdata66
+*.ibdata67
+*.ibdata68
+*.ibdata69
+*.ibdata70
+*.ibdata71
+*.ibdata72
+*.ibdata73
+*.ibdata74
+*.ibdata75
+*.ibdata76
+*.ibdata77
+*.ibdata78
+*.ibdata79
+*.ibdata80
+*.ibdata81
+*.ibdata82
+*.ibdata83
+*.ibdata84
+*.ibdata85
+*.ibdata86
+*.ibdata87
+*.ibdata88
+*.ibdata89
+*.ibdata90
+*.ibdata91
+*.ibdata92
+*.ibdata93
+*.ibdata94
+*.ibdata95
+*.ibdata96
+*.ibdata97
+*.ibdata98
+*.ibdata99
+*.ibdata100
+
+# Backup files
+*.bak
+*.backup
+*.old
+*.orig
+*.swp
+*.swo
+*~
+
+# Cache files
+*.cache
 .cache/ 
